--- a/projects_sub/apps_software/mycreations.html
+++ b/projects_sub/apps_software/mycreations.html
@@ -5,23 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Creations - Kalana Sahan Dillimuni</title>
 
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- AOS CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <!-- Google Fonts (Poppins) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- Alpine.js CDN - Added defer attribute -->
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <!-- Custom Styles and Tailwind Config -->
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -73,37 +67,31 @@
 </head>
 <body class="bg-darkbg text-lighttext" x-data="{ mobileMenuOpen: false }">
 
-    <!-- Header -->
     <header class="fixed w-full top-0 z-50 transition-all duration-300 bg-transparent">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center max-w-7xl">
-            <!-- Logo Link -->
             <a href="../../index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
 
-            <!-- Desktop Navigation -->
             <ul class="hidden md:flex space-x-8 items-center">
                 <li><a href="../../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
                 <li><a href="../../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
                 <li><a href="../../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
-                <!-- Projects link styled as a button -->
                 <li><a href="../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
                 <li><a href="../../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
             </ul>
 
-            <!-- Mobile Menu Button -->
             <button @click="mobileMenuOpen = !mobileMenuOpen" class="md:hidden focus:outline-none text-lighttext hover:text-primary text-2xl z-50">
                 <i :class="mobileMenuOpen ? 'fas fa-times' : 'fas fa-bars'"></i>
             </button>
         </nav>
     </header>
 
-    <!-- Mobile Menu -->
     <div x-show="mobileMenuOpen"
           x-transition:enter="transition ease-out duration-300"
           x-transition:enter-start="opacity-0 transform -translate-y-full"
           x-transition:enter-end="opacity-100 transform translate-y-0"
           x-transition:leave="transition ease-in duration-200"
           x-transition:leave-start="opacity-100 transform translate-y-0"
-          x-transition:leave-end="opacity-0 transform -translate-y-full"
+          x-transition:leave-end="opacity-0 transform -translate-y-4"
           class="fixed inset-0 bg-black/95 z-40 flex flex-col items-center justify-center space-y-6 md:hidden"
           @click.away="mobileMenuOpen = false">
             <a href="../../index.html" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Home</a>
@@ -121,7 +109,6 @@
                 Explore a collection of mobile applications, desktop software, and web applications I've developed.
             </p>
 
-            <!-- Tab Buttons -->
             <div class="flex justify-center space-x-4 mb-12" data-aos="fade-up" data-aos-delay="200">
                 <button @click="activeTab = 'apps'"
                         :class="{ 'bg-gradient-to-r from-primary to-secondary text-white shadow-lg': activeTab === 'apps', 'bg-gray-700 text-lighttext hover:bg-gray-600': activeTab !== 'apps' }"
@@ -135,51 +122,43 @@
                 </button>
             </div>
 
-            <!-- Mobile Apps Section -->
             <div x-show="activeTab === 'apps'" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0 transform -translate-y-4" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform -translate-y-4">
                 <h3 class="text-2xl md:text-3xl font-bold text-primary text-center mb-8" data-aos="fade-up" data-aos-delay="250">Mobile Apps</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
 
-                    <!-- Mobile App 1 Card (MyFinanceApp) -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="300">
                         <img src="app1/my_app_icon.png" alt="MyFinanceApp Image" class="app-img-placeholder">
                         <div class="p-6">
                             <h4 class="text-xl font-semibold text-white mb-2">MyFinanceApp</h4>
                             <p class="text-gray-300 text-sm mb-4">A comprehensive mobile app for managing personal finances, tracking expenses, and budgeting.</p>
-                            <!-- Link to MyFinanceApp detail page. It's in the same directory. -->
                             <a href="my-finance-app.html" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
                                 <i class="fas fa-download mr-2"></i> Download App
                             </a>
                         </div>
                     </div>
 
-                    <!-- Mobile App 2 Card (KSD Protector) -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="350">
                         <img src="app2/icon.png" alt="KSD Protector App Image" class="app-img-placeholder">
                         <div class="p-6">
                             <h4 class="text-xl font-semibold text-white mb-2">KSD Protector: Secure Password Manager</h4>
                             <p class="text-gray-300 text-sm mb-4">A secure, offline-first mobile application for generating, analyzing, and storing your passwords.</p>
-                            <!-- Link to KSD Protector detail page. It's in the same directory. -->
                             <a href="ksd-protector-app.html"class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
                                 <i class="fas fa-download mr-2"></i> Download App
                             </a>
                         </div>
                     </div>
 
-                    <!-- Mobile App 3 Card (K.S.D Morse Code Translator) -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="400">
                         <img src="app3/icon.png" alt="K.S.D Morse Code Translator App Image" class="app-img-placeholder">
                         <div class="p-6">
                             <h4 class="text-xl font-semibold text-white mb-2">K.S.D Morse Code Translator</h4>
                             <p class="text-gray-300 text-sm mb-4">An intuitive mobile app for bidirectional Morse code translation and comprehensive reference.</p>
-                            <!-- Link to K.S.D Morse Code Translator detail page. It's in the same directory. -->
                             <a href="ksd-morse-app.html" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
                                 <i class="fas fa-download mr-2"></i> Download App
                             </a>
                         </div>
                     </div>
                     
-                    <!-- K.S.D Note App Card -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="450">
                         <img src="app4/icon.png" alt="K.S.D Note App Screenshot" class="app-img-placeholder object-contain p-4">
                         <div class="p-6">
@@ -191,17 +170,24 @@
                         </div>
                     </div>
                     
+                    <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="500">
+                        <img src="App5/icon.png" alt="K.S.D BIZ Manager App Icon" class="app-img-placeholder object-contain p-4">
+                        <div class="p-6">
+                            <h4 class="text-xl font-semibold text-white mb-2">K.S.D BIZ Manager</h4>
+                            <p class="text-gray-300 text-sm mb-4">A comprehensive business management solution for small business owners.</p>
+                            <a href="ksd-biz-manager.html"  class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
+                                <i class="fas fa-download mr-2"></i> Download App
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Desktop Software & Web Applications Section -->
             <div x-show="activeTab === 'software'" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0 transform -translate-y-4" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform -translate-y-4">
                 <h3 class="text-2xl md:text-3xl font-bold text-primary text-center mb-8" data-aos="fade-up" data-aos-delay="250">Desktop Software & Web Applications</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
 
-                    <!-- Desktop Software 1 Card (Point of Sale (POS) Desktop Application) -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="300">
-                        <!-- Updated image source to cover.jpg -->
                         <img src="software1/cover.jpg" alt="Point of Sale Desktop Application Cover Image" class="app-img-placeholder">
                         <div class="p-6">
                             <h4 class="text-xl font-semibold text-white mb-2">Point of Sale (POS) Desktop Application</h4>
@@ -212,7 +198,6 @@
                         </div>
                     </div>
 
-                    <!-- Web Application 1 Card -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="350">
                         <img src="software3/cover.jpg" alt="Web Application 1 Image" class="app-img-placeholder">
                         <div class="p-6">
@@ -224,9 +209,7 @@
                         </div>
                     </div>
 
-                    <!-- Web Application 2 Card (Web-based Point of Sale & Business Management Solution) -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="400">
-                        <!-- Updated image source for Local Web App 2 -->
                         <img src="software2/cover.jpg" alt="Web-based POS & Business Management Solution Cover Image" class="app-img-placeholder">
                         <div class="p-6">
                             <h4 class="text-xl font-semibold text-white mb-2">Web-based Point of Sale & Business Management Solution</h4>
@@ -237,13 +220,11 @@
                         </div>
                     </div>
 
-                    <!-- K.S.D Pasteboard Card - Updated to Download Software -->
                     <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="450">
                         <img src="software4/icon.png" alt="K.S.D Pasteboard Icon" class="app-img-placeholder object-contain p-4">
                         <div class="p-6">
                             <h4 class="text-xl font-semibold text-white mb-2">K.S.D Pasteboard</h4>
                             <p class="text-gray-300 text-sm mb-4">An advanced clipboard manager for desktop, enhancing workflow with history and search.</p>
-                            <!-- Changed to Download Software button -->
                             <a href="ksd-pasteboard.html" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
                                 <i class="fas fa-download mr-2"></i> Download Software
                             </a>
@@ -255,7 +236,6 @@
         </section>
     </main>
 
-    <!-- Footer - Paths and content retained from user's provided code -->
     <footer class="bg-black text-gray-500 py-8 mt-12">
         <div class="container mx-auto px-6 text-center">
             <div class="mb-6">
@@ -269,13 +249,11 @@
                     <a href="https://github.com/kaali-k" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-github"></i></a>
                 </div>
             </div>
-            <!-- Copyright name retained from user's provided code -->
             <p>&copy; <span id="currentYear"></span> K.S.D All Rights Reserved.</p>
             <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
         </div>
     </footer>
 
-    <!-- AOS JS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         // Initialize AOS
