--- a/projects_sub/clock.html
+++ b/projects_sub/clock.html
@@ -6,108 +6,47 @@
     <title>World Clock - Kalana Sahan Dillimuni</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            /* Background and text color are handled by Tailwind classes on body */
-            line-height: 1.6;
+            background-color: #0f0f0f;
+            color: #e0e0e0;
+            overflow-x: hidden;
         }
-
-         /* Custom gradient text (if needed elsewhere, keeping for consistency) */
- .text-gradient {
- background: linear-gradient(90deg, #ff416c, #ff4b2b); /* Example gradient */
- -webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
-background-clip: text;
- text-fill-color: transparent;
- }
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Outfit', sans-serif;
+        }
+        .glass-card {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+        }
         .section-divider {
- height: 2px;
- background: linear-gradient(90deg, #ff416c, #ff4b2b);
-width: 80px;
-margin: 1rem auto 2rem auto; /* Centered divider */
-}
-
-        /* --- Clock Specific Styles (from your styles.css, adapted for dark theme) --- */
-        /* Using custom properties based on theme colors */
-        :root {
-            --clock-background: #2a2a2a; /* Card background */
-            --clock-border: #d63031; /* Primary color */
-            --clock-title-color: #d63031; /* Primary color */
-            --clock-time-color: #ff4b2b; /* Secondary color */
-            --clock-text-color: #e0e0e0; /* Light text */
-        }
-
-        /* Removed body styling as it's handled by Tailwind */
-        /* Removed container styling as Tailwind container is used */
-        /* Removed title styling as section title is used */
-
-        .clock {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-
-        .time-box {
-            background-color: var(--clock-background); /* Use theme background */
-            border: 2px solid var(--clock-border); /* Use theme border color */
+            height: 3px;
+            background: linear-gradient(90deg, transparent, #ff4b2b, transparent);
+            width: 120px;
+            margin: 1.5rem auto 3rem auto;
             border-radius: 10px;
-            padding: 20px;
-            width: 200px; /* Fixed width */
-            text-align: center;
-            color: var(--clock-text-color); /* Use theme text color */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3); /* Add shadow */
-            transition: transform 0.3s ease; /* Add hover effect */
         }
-         .time-box:hover {
-             transform: translateY(-5px); /* Slight lift on hover */
-         }
-
-
-        .time-box h2 {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-            color: var(--clock-title-color); /* Use theme title color */
-             font-weight: 600; /* Semi-bold */
-        }
-
-        .time-box p {
-            font-size: 1.5rem;
-            color: var(--clock-time-color); /* Use theme time color */
-             font-weight: bold; /* Bold time */
-        }
-
-        /* Responsive adjustments for time boxes */
-        @media (max-width: 480px) {
-             .time-box {
-                 width: 100%; /* Full width on small screens */
-             }
-        }
-
-
     </style>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              primary: '#d63031', // Your red
-              secondary: '#ff4b2b', // A complementary orange/red
-              darkbg: '#1a1a1a',
+              primary: '#d63031',
+              secondary: '#ff4b2b',
+              darkbg: '#0f0f0f',
               lighttext: '#e0e0e0',
-              cardbg: '#2a2a2a',
             }
           }
         }
@@ -124,10 +63,10 @@ margin: 1rem auto 2rem auto; /* Centered divider */
 
             <ul class="hidden md:flex space-x-8 items-center">
                 <li><a href="../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
-                <li><a href="../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
-                 <li><a href="../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
-                 <li><a href="../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
-                 <li><a href="../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
+                <li><a href="../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold shadow-lg shadow-primary/30">Projects</a></li>
+                <li><a href="../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
+                <li><a href="../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
+                <li><a href="../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
             </ul>
 
             <button @click="mobileMenuOpen = !mobileMenuOpen" class="md:hidden focus:outline-none text-lighttext hover:text-primary text-2xl z-50">
@@ -136,130 +75,90 @@ margin: 1rem auto 2rem auto; /* Centered divider */
         </nav>
     </header>
 
-    <div x-show="mobileMenuOpen"
-         x-transition:enter="transition ease-out duration-300"
-         x-transition:enter-start="opacity-0 transform -translate-y-full"
-         x-transition:enter-end="opacity-100 transform translate-y-0"
-         x-transition:leave="transition ease-in duration-200"
-         x-transition:leave-start="opacity-100 transform translate-y-0"
-         x-transition:leave-end="opacity-0 transform -translate-y-full"
-         class="fixed inset-0 bg-black/95 z-40 flex flex-col items-center justify-center space-y-6 md:hidden"
-         @click.away="mobileMenuOpen = false">
-            <a href="../index.html" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Home</a>
-            <a href="../projects.html" @click="mobileMenuOpen = false" class="text-2xl text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a>
-             <a href="../index.html#about" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">About</a>
-             <a href="../index.html#skills" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Skills</a>
-            <a href="../index.html#contact" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Contact</a>
+    <div x-show="mobileMenuOpen" class="fixed inset-0 bg-black/95 z-40 flex flex-col items-center justify-center space-y-6 md:hidden"
+         @click.away="mobileMenuOpen = false" style="display: none;">
+            <a href="../index.html" class="text-2xl hover:text-primary transition duration-300">Home</a>
+            <a href="../projects.html" class="text-2xl text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a>
+            <a href="../index.html#about" class="text-2xl hover:text-primary transition duration-300">About</a>
+            <a href="../index.html#skills" class="text-2xl hover:text-primary transition duration-300">Skills</a>
+            <a href="../index.html#contact" class="text-2xl hover:text-primary transition duration-300">Contact</a>
     </div>
 
-    <main class="py-20 pt-32 md:pt-40 flex justify-center items-center min-h-screen"> <section id="clocks-project" class="container mx-auto px-6 max-w-6xl text-center"> <h2 class="text-3xl md:text-4xl font-bold text-white mb-2" data-aos="fade-up">World Clock</h2> <div class="section-divider" data-aos="fade-up" data-aos-delay="100"></div>
+    <main class="py-20 pt-32 md:pt-40 flex justify-center items-center min-h-screen"> 
+        <section id="clocks-project" class="container mx-auto px-6 max-w-6xl text-center"> 
+            <h2 class="text-3xl md:text-4xl font-bold text-white mb-2" data-aos="fade-up">World Clock</h2> 
+            <div class="section-divider" data-aos="fade-up" data-aos-delay="100"></div>
             <p class="text-gray-400 mb-12 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="150">A collection of real-time clocks for different time zones around the world.</p>
 
-            <div class="clock" id="clock-container" data-aos="zoom-in" data-aos-delay="200">
-                </div>
+            <div class="flex flex-wrap justify-center gap-6" id="clock-container" data-aos="zoom-in" data-aos-delay="200">
+                <!-- Clock items will be injected here -->
+            </div>
          </section>
     </main>
 
     <footer class="bg-black text-gray-500 py-8 mt-12">
         <div class="container mx-auto px-6 text-center">
             <div class="mb-6">
-<p class="text-gray-400 mb-4 text-lg">Follow Me</p>
-<div class="flex justify-center items-center space-x-5 md:space-x-6">
-   <!-- Social Media Links in Footer (Reverted to 3 links for consistency) -->
+                <p class="text-gray-400 mb-4 text-lg">Follow Me</p>
+                <div class="flex justify-center items-center space-x-5 md:space-x-6">
                      <a href="https://web.facebook.com/kalana.sahan.79" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-facebook"></i></a>
                      <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
-                     <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.youtube.com/@Part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
-                    <a href="https://github.com/kaali-k" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-github"></i></a>
+                     <a href="https://www.linkedin.com/in/kalanasahan" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+                     <a href="https://www.youtube.com/@Part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-youtube"></i></a>
+                     <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>
+                     <a href="https://github.com/kaali-k" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-github"></i></a>
                 </div>
             </div>
-            <!-- Corrected copyright name -->
             <p>&copy; <span id="currentYear"></span> K.S.D All Rights Reserved.</p>
              <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
         </div>
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
     <script>
-        // Initialize AOS
-        AOS.init({
-             duration: 800, // Shorter duration for faster feel
- once: false, // Allow animation on scroll up/down
- offset: 50, // Trigger animations slightly sooner
-        });
-
-        // Dynamic Copyright Year
+        AOS.init({ duration: 800, once: false, offset: 50 });
         document.getElementById('currentYear').textContent = new Date().getFullYear();
-
-        // Note: Typing effect script from index.html is not needed here.
     </script>
-
     <script>
         const timeZones = [
             { name: "New York", timezone: "America/New_York" },
             { name: "London", timezone: "Europe/London" },
-            { name: "Sri Lanka", timezone: "Asia/Colombo" }, // Added Sri Lanka
+            { name: "Sri Lanka", timezone: "Asia/Colombo" },
             { name: "Tokyo", timezone: "Asia/Tokyo" },
             { name: "Sydney", timezone: "Australia/Sydney" }
-            // Add more cities/timezones as needed
         ];
 
         function updateClock() {
             const clockContainer = document.getElementById("clock-container");
-            clockContainer.innerHTML = ""; // Clear previous content
+            clockContainer.innerHTML = ""; 
 
-            const now = new Date(); // Get the current Date object ONCE
+            const now = new Date(); 
 
             timeZones.forEach(zone => {
                 try {
-                    // Use toLocaleTimeString and toLocaleDateString directly on the Date object
-                    const timeOptions = {
-                        hour: '2-digit',
-                        minute: '2-digit',
-                        second: '2-digit',
-                         hour12: true // Use 12-hour format with AM/PM
-                    };
+                    const timeOptions = { hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
                     const formattedTime = now.toLocaleTimeString("en-US", { timeZone: zone.timezone, ...timeOptions });
 
-                    const dateOptions = {
-                         year: 'numeric',
-                         month: 'long',
-                         day: 'numeric'
-                    };
-                     const formattedDate = now.toLocaleDateString('en-US', { timeZone: zone.timezone, ...dateOptions });
-
+                    const dateOptions = { year: 'numeric', month: 'long', day: 'numeric' };
+                    const formattedDate = now.toLocaleDateString('en-US', { timeZone: zone.timezone, ...dateOptions });
 
                     const timeBox = document.createElement("div");
-                    timeBox.className = "time-box"; // Use the CSS class for styling
+                    // New glass-card styling for the clock boxes
+                    timeBox.className = "glass-card p-6 rounded-xl w-64 text-center transform hover:-translate-y-2 transition-all duration-300 border border-white/5 hover:border-primary/50 group"; 
 
                     timeBox.innerHTML = `
-                        <h2>${zone.name}</h2>
-                        <p>${formattedTime}</p>
+                        <h2 class="text-xl font-bold text-white mb-2 group-hover:text-primary transition-colors">${zone.name}</h2>
+                        <p class="text-3xl font-extrabold text-secondary mb-2">${formattedTime}</p>
                         <p class="text-sm text-gray-400 mt-1">${formattedDate}</p> `;
 
                     clockContainer.appendChild(timeBox);
                 } catch (error) {
                     console.error(`Error updating clock for ${zone.name}:`, error);
-                    // Display error in the time box
-                     const timeBox = document.createElement("div");
-                     timeBox.className = "time-box";
-                      timeBox.innerHTML = `
-                          <h2>${zone.name}</h2>
-                          <p class="text-red-500">Error</p>
-                          <p class="text-sm text-gray-400 mt-1">Could not load time.</p>
-                      `;
-                     clockContainer.appendChild(timeBox);
                 }
             });
         }
-
-        // Update clock every second
         setInterval(updateClock, 1000);
-        updateClock(); // Initial call to display immediately
-
+        updateClock(); 
     </script>
-
 </body>
-</html> 
+</html>
