--- a/projects_sub/apps_software/mycreations.html
+++ b/projects_sub/apps_software/mycreations.html
@@ -123,6 +123,20 @@
                     </div>
                 </div>
 
+                <!-- Z Flow -->
+                <div class="glass-card rounded-xl overflow-hidden hover:-translate-y-2 transition duration-300 group" data-aos="fade-up" data-aos-delay="550">
+                    <div class="h-48 overflow-hidden bg-gray-900 flex items-center justify-center">
+                        <img src="App7/icon.png" alt="Z Flow Icon" class="h-full object-contain p-4 group-hover:scale-110 transition duration-500">
+                    </div>
+                    <div class="p-6">
+                        <h4 class="text-xl font-bold text-white mb-2 group-hover:text-primary transition-colors">Z Flow</h4>
+                        <p class="text-gray-400 text-sm mb-4">An intelligent automated tool that interacts with 'Skip Ad' buttons and provides an AMOLED power-saving background mode.</p>
+                        <a href="z-flow.html" class="inline-block px-5 py-2 border border-primary/50 text-white rounded-full bg-primary/10 hover:bg-primary hover:text-white transition duration-300 text-sm font-medium">
+                            <i class="fas fa-info-circle mr-2"></i> View Details
+                        </a>
+                    </div>
+                </div>
+
                 <!-- Z Pinger (Moved to End) -->
                 <div class="glass-card rounded-xl overflow-hidden hover:-translate-y-2 transition duration-300 group" data-aos="fade-up" data-aos-delay="600">
                     <div class="h-48 overflow-hidden">
